igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@.*|igt@gem_ctx_persistence@legacy-engines-hang@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
Starting subtest: engines-hang
Starting dynamic subtest: rcs0
(gem_ctx_persistence:1279) CRITICAL: Test assertion failure function test_nonpersistent_hang, file ../tests/i915/gem_ctx_persistence.c:346:
(gem_ctx_persistence:1279) CRITICAL: Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
(gem_ctx_persistence:1279) CRITICAL: error: -62 != 0
Dynamic subtest rcs0 failed.
**** DEBUG ****
(gem_ctx_persistence:1279) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(gem_ctx_persistence:1279) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_ctx_persistence:1279) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(gem_ctx_persistence:1279) ioctl_wrappers-DEBUG: Test requirement passed: dir >= 0
(gem_ctx_persistence:1279) ioctl_wrappers-DEBUG: Test requirement passed: err == 0
(gem_ctx_persistence:1279) DEBUG: Test requirement passed: gem_engine_property_printf(i915, name, ATTR, "%d", 50) > 0
(gem_ctx_persistence:1279) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_ctx_persistence:1279) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(gem_ctx_persistence:1279) ioctl_wrappers-DEBUG: Test requirement passed: dir >= 0
(gem_ctx_persistence:1279) ioctl_wrappers-DEBUG: Test requirement passed: err == 0
(gem_ctx_persistence:1279) ioctl_wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_ctx_persistence:1279) igt_dummyload-DEBUG: Test requirement passed: !gem_has_cmdparser(fd, opts->engine)
(gem_ctx_persistence:1279) igt_dummyload-DEBUG: Test requirement passed: nengine
(gem_ctx_persistence:1279) CRITICAL: Test assertion failure function test_nonpersistent_hang, file ../tests/i915/gem_ctx_persistence.c:346:
(gem_ctx_persistence:1279) CRITICAL: Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
(gem_ctx_persistence:1279) CRITICAL: error: -62 != 0
(gem_ctx_persistence:1279) igt_core-INFO: Stack trace:
(gem_ctx_persistence:1279) igt_core-INFO: #0 ../lib/igt_core.c:1676 __igt_fail_assert()
(gem_ctx_persistence:1279) igt_core-INFO: #1 ../tests/i915/gem_ctx_persistence.c:349 test_nonpersistent_hang()
(gem_ctx_persistence:1279) igt_core-INFO: #2 [<unknown>+0xab7999b0]
**** END ****
Dynamic subtest rcs0: FAIL (0.208s)
- Show closed items
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- LAKSHMINARAYANA VUDUM added feature: GEM platform: ICL platform: TGL labels
added feature: GEM platform: ICL platform: TGL labels
- Reporter
The CI Bug Log issue associated to this bug has been updated by Lakshmi Vudum.
New filters associated
- ICL TGL: igt@gem_ctx_persistence@engines-hang@rcs0 - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5556/shard-iclb5/igt@gem_ctx_persistence@engines-hang@rcs0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8235/shard-tglb5/igt@gem_ctx_persistence@engines-hang@rcs0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_17177/shard-tglb7/igt@gem_ctx_persistence@engines-hang@rcs0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_466/fi-tgl-u/igt@gem_ctx_persistence@engines-hang@rcs0.html
- ICL TGL: igt@gem_ctx_persistence@engines-hang@rcs0 - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: ICL TGL: igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["fi-icl-u2", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-icl-u4", "fi-tgl-u", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1", "custom-tgl-joshikun", "fi-icl-u"] OR machine_tag IS IN ["ICL", "TGL"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@gem_ctx_persistence@engines-hostile@vecs0", "igt@gem_ctx_persistence@engines-hostile@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs1", "igt@gem_ctx_persistence@engines-hostile@bcs0", "igt@gem_ctx_persistence@engines-hang@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs0"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: gem_wait\(i915, spin->handle, &timeout\) == 0'
New failures caught by the filter:
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8255/shard-tglb6/igt@gem_ctx_persistence@engines-hostile@vcs1.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8256/shard-iclb4/igt@gem_ctx_persistence@engines-hostile@vcs1.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8256/shard-tglb3/igt@gem_ctx_persistence@engines-hostile@vcs1.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8257/shard-iclb6/igt@gem_ctx_persistence@engines-hostile@vecs0.html
- LAKSHMINARAYANA VUDUM changed title from igt@gem_ctx_persistence@engines-hang@rcs0 - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0 to *igt@gem_ctx_persistence@engines-hang@rcs0{+|gt@gem_ctx_persistence@engines-hostile@.+} - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
changed title from igt@gem_ctx_persistence@engines-hang@rcs0 - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0 to *igt@gem_ctx_persistence@engines-hang@rcs0{+|gt@gem_ctx_persistence@engines-hostile@.+} - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: KBL ICL TGL: igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["fi-kbl-soraka", "shard-kbl3", "fi-icl-u2", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "shard-kbl4", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "shard-kbl7", "fi-icl-u4", "fi-tgl-u", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "fi-kbl-7500u", "re-tgl1-display", "re-tgl2-display", "shard-kbl6", "shard-tglb7", "shard-tglb8", "shard-kbl1", "fi-kbl-7560u", "fi-tgl-y", "re-tgl-y", "shard-tglb0", "shard-tglb9", "fi-kbl-r", "fi-icl-1065g7", "fi-kbl-7567u", "fi-tgl-guc", "re-tgl-cham", "re-tgl-u2", "fi-tgl-dsi", "shard-kbl2", "ba-tgl-1", "custom-tgl-joshikun", "pig-icl-1065g7", "shard-kbl5", "shard-kbl", "fi-kbl-guc", "fi-kbl-x1275", "fi-kbl-8809g", "fi-icl-u"] OR machine_tag IS IN ["KBL", "ICL", "TGL"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@gem_ctx_persistence@engines-hostile@vecs0", "igt@gem_ctx_persistence@engines-hostile@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs1", "igt@gem_ctx_persistence@engines-hostile@bcs0", "igt@gem_ctx_persistence@engines-hang@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs0"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: gem_wait\(i915, spin->handle, &timeout\) == 0'
No new failures caught with the new filter
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: KBLGEN9 ICL TGL: igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-skl-6260u", "shard-apl2", "shard-kbl5", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "fi-glk-dsi", "fi-kbl-7500u", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-icl-u", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "fi-icl-u2", "shard-skl10", "fi-apl-guc", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "fi-skl-lmem", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-icl-u4", "fi-tgl-u", "fi-cml-h", "fi-cml-s", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1", "custom-tgl-joshikun", "pig-icl-1065g7", "tgl-u-lpddr-ba"] OR machine_tag IS IN ["KBL", "ICL", "TGL", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@gem_ctx_persistence@engines-hostile@vecs0", "igt@gem_ctx_persistence@engines-hostile@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs1", "igt@gem_ctx_persistence@legacy-engines-hostile@bsd2", "igt@gem_ctx_persistence@engines-hostile@bcs0", "igt@gem_ctx_persistence@engines-hang@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs0"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: gem_wait\(i915, spin->handle, &timeout\) == 0'
New failures caught by the filter:
- LAKSHMINARAYANA VUDUM mentioned in issue #2092 (closed)
mentioned in issue #2092 (closed)
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: GEN9 ICL TGL: igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@|igt@gem_ctx_persistence@legacy-engines-hang@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-skl-6260u", "shard-apl2", "shard-kbl5", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "fi-glk-dsi", "fi-kbl-7500u", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-icl-u", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "fi-icl-u2", "shard-skl10", "fi-apl-guc", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "fi-skl-lmem", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-icl-u4", "fi-tgl-u", "fi-cml-h", "fi-cml-s", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1", "custom-tgl-joshikun", "pig-icl-1065g7", "tgl-u-lpddr-ba", "re-tgl-u3", "fi-tgl-h"] OR machine_tag IS IN ["ICL", "TGL", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@gem_ctx_persistence@engines-hostile@vecs0", "igt@gem_ctx_persistence@engines-hostile@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs1", "igt@gem_ctx_persistence@legacy-engines-hostile@bsd2", "igt@gem_ctx_persistence@legacy-engines-hang@render", "igt@gem_ctx_persistence@engines-hostile@bcs0", "igt@gem_ctx_persistence@engines-hang@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs0"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: gem_wait\(i915, spin->handle, &timeout\) == 0'
New failures caught by the filter:
- LAKSHMINARAYANA VUDUM changed title from igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@. - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0* to igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@.*|igt@gem_ctx_persistence@legacy-engines-hang@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
changed title from igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@. - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0* to igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@.*|igt@gem_ctx_persistence@legacy-engines-hang@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
- LAKSHMINARAYANA VUDUM added platform: RKL label
added platform: RKL label
- LAKSHMINARAYANA VUDUM added platform: GEN9 label
added platform: GEN9 label
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: GEN9 ICL RKL TGL: igt@gem_ctx_persistence@engines-hang@rcs0|gt@gem_ctx_persistence@engines-hostile@|igt@gem_ctx_persistence@legacy-engines-hang@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-skl-6260u", "shard-apl2", "shard-kbl5", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "fi-glk-dsi", "fi-kbl-7500u", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-icl-u", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "fi-icl-u2", "shard-skl10", "fi-apl-guc", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "fi-skl-lmem", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-icl-u4", "fi-tgl-u", "fi-cml-h", "fi-cml-s", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1", "custom-tgl-joshikun", "pig-icl-1065g7", "tgl-u-lpddr-ba", "re-tgl-u3", "fi-tgl-h", "re-rkl-1", "re-rkl-cham"] OR machine_tag IS IN ["ICL", "TGL", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@gem_ctx_persistence@engines-hostile@vecs0", "igt@gem_ctx_persistence@engines-hostile@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs1", "igt@gem_ctx_persistence@legacy-engines-hostile@bsd2", "igt@gem_ctx_persistence@legacy-engines-hang@render", "igt@gem_ctx_persistence@engines-hostile@bcs0", "igt@gem_ctx_persistence@engines-hang@rcs0", "igt@gem_ctx_persistence@engines-hostile@vcs0"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: gem_wait\(i915, spin->handle, &timeout\) == 0'
New failures caught by the filter:
- Reporter
The CI Bug Log issue associated to this bug has been updated by Lakshmi Vudum.
New filters associated
- RKL: igt@gem_ctx_persistence@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0, error: -62 != 0
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8786/re-rkl-1/igt@gem_ctx_persistence@engines-persistence@rcs0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8786/re-rkl-1/igt@gem_ctx_persistence@engines-persistence@vcs0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8786/re-rkl-1/igt@gem_ctx_persistence@engines-persistence@vecs0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8786/re-rkl-1/igt@gem_ctx_persistence@legacy-engines-persistence@render.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8786/re-rkl-1/igt@gem_ctx_persistence@legacy-engines-persistence@bsd.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8786/re-rkl-1/igt@gem_ctx_persistence@legacy-engines-persistence@vebox.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8834/re-rkl-1/igt@gem_ctx_persistence@legacy-engines-hang@bsd.html
- RKL: igt@gem_ctx_persistence@ - fail - Failed assertion: gem_wait(i915, spin->handle, &timeout) == 0, error: -62 != 0
Collapse replies - Reporter
Note that rkl is probably suffering from an unknown gen bug.
- Reporter
I'm feeling optimistic:
commit ffa770bd4b42925cb74886deb0fead959f4e52cf (HEAD -> drm-intel-next-queued, drm-intel/drm-intel-next-queued) Author: Chris Wilson <chris@chris-wilson.co.uk> Date: Thu Aug 6 11:59:54 2020 +0100 drm/i915/gem: Reduce context termination list iteration guard to RCU As we now protect the timeline list using RCU, we can drop the timeline->mutex for guarding the list iteration during context close, as we are searching for an inflight request. Any new request will see the context is banned and not be submitted. In doing so, pull the checks for a concurrent submission of the request (notably the i915_request_completed()) under the engine spinlock, to fully serialise with __i915_request_submit()). That is in the case of preempt-to-busy where the request may be completed during the __i915_request_submit(), we need to be careful that we sample the request status after serialising so that we don't miss the request the engine is actually submitting. Fixes: 4a3174152147 ("drm/i915/gem: Refine occupancy test in kill_context()") References: d22d2d073ef8 ("drm/i915: Protect i915_request_await_start from early waits") # rcu protection of timeline->requests References: https://gitlab.freedesktop.org/drm/intel/-/issues/1622 References: https://gitlab.freedesktop.org/drm/intel/-/issues/2158 Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk> Reviewed-by: Tvrtko Ursulin <tvrtko.ursulin@intel.com> Link: https://patchwork.freedesktop.org/patch/msgid/20200806105954.7766-1-chris@chris-wilson.co.uk
- Chris Wilson closed
closed
- Chris Wilson mentioned in commit lyudess/linux@ffa770bd
mentioned in commit lyudess/linux@ffa770bd
- Chris Wilson mentioned in commit lyudess/linux@09a3054f
mentioned in commit lyudess/linux@09a3054f
- Reporter
The CI Bug Log issue associated to this bug has been archived.
New failures matching the above filters will not be associated to this bug anymore.